--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,30 @@ p {
 header#id-header img#icon {
     position: absolute;
     left: 67rem;  /* 750px */
-    top: 50px;
+    top: 70px;
+}
+
+header#id-header {
+    border-bottom: 1px #606060 solid;
+    height: 150px;
+    background: url("../images/glass-logo-peq.jpg") no-repeat 0px 80px;
+}
+
+header#id-header h1 {
+    font-family: Arial, sans-serif;
+    font-size: 30pt;
+    color: #606060;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, .6);
+    padding: 0px;
+    margin-bottom: 0px;
+}
+
+header#id-header h2 {
+    font-family: Arial, sans-serif;
+    color: #888888;
+    font-size: 15pt;
+    padding: 0px;
+    margin-top: 0px;
 }
 
 
