--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,7 @@ body {
 }
 
 div#interface {
+    position: relative;
     width: 70rem;
     background-color: #ffffff;
     margin: -20px auto 0px auto;
@@ -25,9 +26,9 @@ p {
 }
 
 header#id-header img#icon {
-    position: absolute;
-    left: 67rem;  /* 750px */
-    top: 70px;
+    position: relative;
+    left: 950px;  /* 750px */
+    top: -35px;
 }
 
 header#id-header {
@@ -93,8 +94,8 @@ nav#menu ul {
     list-style: none;
     text-transform: uppercase;
     position: absolute;
-    top: -20px;
-    left: 37rem;    /* model value 300px */
+    top: -10px;
+    left: 500px;    /* model value 300px */
 }
 
 nav#menu li {
