--- a/styles/style.css
+++ b/styles/style.css
@@ -122,3 +122,26 @@ nav#menu a {
 nav#menu a:hover {
     color: #ffffff;
 }
+
+section#main-content {
+    display: block;
+    width: 680px;
+    float: left;
+    border-right: 1px solid #606060;
+    padding-right: 15px;
+}
+
+aside#news-aside {
+    display: block;
+    width: 400px;
+    float: right;
+}
+
+footer#footer {
+    clear: both;
+    border-top: 1px solid #606060;
+}
+
+footer#footer p {
+    text-align: center;
+}
