--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,8 @@
 }
 
 
-body {            
+body {
+    font-family: Arial, sans-serif;
     background-color: #dddddd;
     color: rgba(0, 0, 0, 1);
 }
@@ -23,6 +24,15 @@ div#interface {
 p {
     text-align: justify;
     text-indent: 50px;
+}
+
+a {
+    color: #606060;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 header#id-header img#icon {
@@ -131,6 +141,38 @@ section#main-content {
     padding-right: 15px;
 }
 
+article#main-news h2 {
+    font-size: 13pt;
+    color: #606060;
+    background-color: #dddddd;
+    padding: 5px 0px 5px 10px;
+    margin: 10px 0px 10px 0px;
+}
+
+header#art-header h1 {
+    font-family: 'FonteLogo', sans-serif;
+    font-size: 20pt;
+    color: #606060;
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+
+.right {
+    text-align: right;
+}
+
+header#art-header h2 {
+    font-size: 13pt;
+    color: #cecece;
+    background-color: #ffffff;
+    margin: 0px;
+}
+
+header#art-header h3 {
+    font-size: 12px;
+    color: #606060;
+}
+
 table#spec-table {
     border: 1px solid #606060;
     border-spacing: 0px;
@@ -175,6 +217,24 @@ aside#news-aside {
     display: block;
     width: 400px;
     float: right;
+    background-color: #dddddd;
+    padding: 10px;
+    margin-top: 10px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, .5);  /* Deslocamento H, V, Espalhamento */
+}
+
+aside#news-aside h1 {
+    font-family: 'FonteLogo', sans-serif;
+    font-size: 20pt;
+    color: #606060;
+    margin-top: 0px;
+}
+
+aside#news-aside h2 {
+    background-color: #606060;
+    font-size: 13pt;
+    color: #ffffff;
+    padding: 5px;
 }
 
 footer#footer {
