--- a/styles/picture.css
+++ b/styles/picture.css
@@ -17,33 +17,65 @@ ul#photo-album li {
     border: 5px solid #ffffff;
     background-color: #ffffff;
     box-shadow: 1px 1px 3px rgba(0,0,0,.4);
+    transition: all .2s ease-in;
+
+    /* teste */
+    background-position: 50% 50%;
+    background-size: 400px 400px;
+    background-color: #ffffff;
 }
 
 ul#photo-album li span {
     opacity: 0;
+    color: #ffffff;
+    text-shadow: 1px 1px 1px #000000;
+    background-color: rgba(0,0,0,.3);
+    font-size: 9pt;
+    line-height: 370px;
+    padding: 5px;
 }
 
-ul#photo-album li#pic-01 {
-    background: url(../images/galeria-01.jpg) no-repeat;
+ul#photo-album li:hover {
+    transform: scale(1.5);
+
+    /* teste */
+    background-position: 0px 0px;
+    background-size: 200px 200px;
 }
+
+ul#photo-album li:hover span {
+    opacity: 1;
+}
+
+/* alterado 'background' para 'background-image' e removido o no-repeat. Bem como alteraçoes no li#pic-0x e li#pic-0x:hover para evitar redundancia. Propriedades aplicadas direto no bloco li e li:hover */
+ul#photo-album li#pic-01 {
+    background-image: url(../images/galeria-01.jpg);
+    /* background-position: 50% 50%;
+    background-size: 400px 400px;
+    background-color: #ffffff; */
+}
+
+/* ul#photo-album li#pic-01:hover {
+    background-position: 0px 0px;
+    background-size: 200px 200px;
+} */
 
 ul#photo-album li#pic-02 {
-    background: url(../images/galeria-02.jpg) no-repeat;
+    background-image: url(../images/galeria-02.jpg);
 }
 
 ul#photo-album li#pic-03 {
-    background: url(../images/galeria-03.jpg) no-repeat;
+    background-image: url(../images/galeria-03.jpg);
 }
 
 ul#photo-album li#pic-04 {
-    background: url(../images/galeria-04.jpg) no-repeat;
+    background-image: url(../images/galeria-04.jpg);
 }
 
 ul#photo-album li#pic-05 {
-    background: url(../images/galeria-05.jpg) no-repeat;
+    background-image: url(../images/galeria-05.jpg);
 }
 
 ul#photo-album li#pic-06 {
-    background: url(../images/galeria-06.jpg) no-repeat;
+    background-image: url(../images/galeria-06.jpg);
 }
-
